# loca2-hass

./: .gitignore  .pre-commit-config.yaml  ASSET_STATUS_API_UPDATE.md  CHANGELOG.md  CONFIG_FLOW_UPDATE.md  GITHUB_ACTIONS.md  INITIAL_COMMIT_SUMMARY.md  LICENSE  LOCA2_API_UPDATE.md  README.md  VALIDATION_REPORT.md  hacs.json  info.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  hacs.yml  hassfest.yml  release.yml  repository-setup.yml
.kiro/specs/loca2-home-assistant-integration/: design.md  requirements.md  tasks.md
custom_components/loca2/: __init__.py  _version.py  api.py  config_flow.py  const.py  device_tracker.py  logging_utils.py  manifest.json  strings.json
tests/: conftest.py  test_api.py  test_comprehensive_validation.py  test_config_flow.py  test_coordinator.py  test_device_tracker.py  test_error_handling.py  test_final_validation.py  test_hacs_validation.py  test_init.py  test_integration.py
